--- a/src/components/PokemonCard/PokemonCard.scss
+++ b/src/components/PokemonCard/PokemonCard.scss
@@ -1,5 +1,6 @@
 .pokemon-card {
 	border-radius: 5px;
+	border: solid 1px;
 
 	&:hover {
 		box-shadow: 0.5rem;
@@ -10,6 +11,16 @@
 		font-size: 1rem;
 		text-align: center;
 		color: #fff;
-		background-color: #646464;
+		font-family: 'Poppins', sans-serif;
+		font-weight: 400;
+		text-transform: capitalize;
+	}
+
+	&__id {
+		display: block;
+		text-align: right;
+		padding: 3px 3px;
+		font-family: 'Poppins', sans-serif;
+		font-weight: 400;
 	}
 }
