--- a/src/components/PokemonCard/PokemonCard.scss
+++ b/src/components/PokemonCard/PokemonCard.scss
@@ -1,6 +1,8 @@
 .pokemon-card {
 	border-radius: 5px;
 	border: solid 1px;
+	max-width: '150px';
+    max-height: '175px';
 
 	&:hover {
 		box-shadow: 0.5rem;
